<resources>

    <string name="app_name">VapeApp. La App de los vapeadores.</string>
    <string name="navigation_drawer_open">Abrir la caja de navegación</string>
    <string name="navigation_drawer_close">Cerrar la caja de navegación</string>
    <string name="nav_header_title">Triana Codes</string>
    <string name="nav_header_subtitle">trianacodes@gmail.com</string>
    <string name="nav_header_desc">Cabecera de navegación</string>
    <string name="action_settings">Configuración</string>
    <string name="Aromas_Id">Identificador</string>
    <string name="Aromas_Nombre">Nombre del aroma</string>
    <string name="Aromas_HintId">Id</string>
    <string name="Aromas_HintNombre">Nombre del aroma</string>
    <string name="Aromas_Marca">Marca</string>
    <string name="Aromas_HintMarca">Marca del aroma</string>
    <string name="Aromas_Tipo">Tipo</string>
    <string name="Aromas_Porcentaje">Porcentajes recomendados</string>
    <string name="Aromas_HintPorcentaje">0-100</string>
    <string name="Aromas_MinMaceracion">Mínimo</string>
    <string name="Aromas_HintMinMaceracion">0-100</string>
    <string name="Aromas_Semanas">(Semanas)</string>
    <string name="Aromas_MaxMaceracion">Máximo</string>
    <string name="Aromas_btnAnadir">Guardar</string>
    <string name="Aromas_btnModificar">Modificar</string>
    <string name="Aromas_btnBorrar">Eliminar</string>
    <string name="Aromas_Valor_0">0</string>
    <string name="Aromas_Observaciones">Observaciones</string>
    <string name="dialogo_mensaje">Mensaje</string>
    <string name="dialogo_boton_aceptar">Aceptar</string>
    <string name="Errores">Error</string>
    <string name="mensaje_error">Se ha producido el siguiente error:</string>
    <string name="aviso">¡Cuidado!</string>
    <string name="mensaje_maceracion">El valor del Tiempo Máximo de maceración ha de ser mayor que el Tiempo Mínimo de maceración</string>
    <string name="nombre_blanco">El nombre del aroma no puede estar en blanco</string>
    <string name="marca_blanco">La marca del aroma no puede estar en blanco.</string>
    <string name="descripcion_botones_inicio">Botones del activity de inicio</string>
    <string name="opcion_menu_1">Inicio</string>
    <string name="opcion_menu_2">Añadir</string>
    <string name="opcion_menu_3">Lista</string>
    <string name="submenu">Información</string>
    <string name="opcion_submenu_1">Desarrollador</string>
    <string name="mensaje_porcentaje">Por favor, comprueba los valores de los porcentajes recomendados</string>
    <string name="mensaje_seleccion">"Tienes que indicar el tipo de aroma</string>

    <string-array name="tipos">

        <item>Selecciona:</item>
        <item>Frutal</item>
        <item>Bebidas</item>
        <item>Cremas</item>
        <item>Postres</item>
        <item>Tabaquiles</item>
        <item>Otros</item>

    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="opcion_menu_4">Salir de la app</string>
    <string name="content_description_fragment_inicio">Hombre vapeando</string>
    <string name="titulo_menu_aromas">Aromas</string>
    <string name="Aromas_Porcentaje1">Desde</string>
    <string name="Aromas_Porcentaje2">Hasta</string>
    <string name="Aromas_Maceracion">Tiempos de Maceración en Días</string>
    <string name="Aromas_BotonImagen">Incluir Foto</string>
    <string name="Titulo_Nuevo_Aroma">NUEVOS AROMAS</string>
    <string name="descripcion_imagen_aroma">Imágenes de los aromas</string>
    <string name="titulo_nuevo_aroma">Nuevo Aroma</string>
    <string name="Aromas_Foto">Añadir imagen</string>

</resources>
