<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_inicio"
            android:title="@string/opcion_menu_1" />
        <item
            android:id="@+id/nav_nuevo"
            android:icon="@drawable/ic_nuevo"
            android:title="@string/opcion_menu_2" />
        <item
            android:id="@+id/nav_consulta"
            android:icon="@drawable/ic_lista"
            android:title="@string/opcion_menu_3" />
        <item
            android:id="@+id/nav_salir"
            android:icon="@drawable/ic_salir"
            android:title="@string/opcion_menu_4" />
    </group>

    <item android:title="@string/submenu">
        <menu>
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_desarrollador"
                android:title="@string/opcion_submenu_1" />
        </menu>
    </item>

</menu>
